src/bin/snapshots/snapshots__GenericArgs.lifetime.input.snap
---
created: "2019-06-02T15:47:35.337766Z"
creator: insta@0.8.1
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    GenericArgs::AngleBracket {
        args_and_bindings: AngleBracketGenericArgsAndBindings::Args(
            [
                GenericArg::Lifetime | GenericArg::Type(
                    Type::DynTrait {
                        bounds: [
                            TypeBound::Outlives,
                        ],
                    },
                ),
            ],
        ),
    },
)
