src/bin/snapshots/snapshots__GenericArgs.mixed.input.snap
---
created: "2019-06-02T15:47:35.152011Z"
creator: insta@0.8.1
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    GenericArgs::AngleBracket {
        args_and_bindings: AngleBracketGenericArgsAndBindings::Args(
            [
                GenericArg::Type(
                    Type::Path(
                        QPath::Unqualified(
                            Path {
                                path: RelativePath {
                                    segments: [
                                        PathSegment {
                                            ident: _,
                                        },
                                    ],
                                },
                            },
                        ),
                    ) | Type::DynTrait {
                        bounds: [
                            TypeBound::Trait(
                                TypeTraitBound {
                                    path: Path {
                                        path: RelativePath {
                                            segments: [
                                                PathSegment {
                                                    ident: _,
                                                },
                                            ],
                                        },
                                    },
                                },
                            ),
                        ],
                    },
                ),
                GenericArg::Lifetime | GenericArg::Type(
                    Type::DynTrait {
                        bounds: [
                            TypeBound::Outlives,
                        ],
                    },
                ),
                GenericArg::Type(
                    Type::Path(
                        QPath::Unqualified(
                            Path {
                                path: RelativePath {
                                    segments: [
                                        PathSegment {
                                            ident: _,
                                        },
                                    ],
                                },
                            },
                        ),
                    ) | Type::DynTrait {
                        bounds: [
                            TypeBound::Trait(
                                TypeTraitBound {
                                    path: Path {
                                        path: RelativePath {
                                            segments: [
                                                PathSegment {
                                                    ident: _,
                                                },
                                            ],
                                        },
                                    },
                                },
                            ),
                        ],
                    },
                ),
                GenericArg::Lifetime | GenericArg::Type(
                    Type::DynTrait {
                        bounds: [
                            TypeBound::Outlives,
                        ],
                    },
                ),
            ],
        ),
    },
)
