src/bin/snapshots/snapshots__GenericParamKind.lifetime.input.snap
---
created: "2019-06-02T16:25:08.320500Z"
creator: insta@0.8.1
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    GenericParamKind::Lifetime {
        name: _,
    },
)
