src/bin/snapshots/snapshots__GenericParamKind.type-bounded.input.snap
---
created: "2019-06-02T16:38:16.223111Z"
creator: insta@0.8.1
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    GenericParamKind::Type {
        name: _,
        bounds: [
            TypeBound::Outlives,
            TypeBound::Trait(
                TypeTraitBound {
                    path: Path {
                        path: RelativePath {
                            segments: [
                                PathSegment {
                                    ident: _,
                                },
                            ],
                        },
                    },
                },
            ),
        ],
    },
)
